# Templates

./: .clang-format  .clang-tidy  .clangd  .commands.sh  .gitignore  CMakeLists.txt  README.md  main.c  main.cpp
qml/: main.qml
tests/: CMakeLists.txt  test_main.cc
